# note2-pinn-pidl-cyber-control

./: .gitignore  LICENSE  NOTICE.md  PROJECT_MAP.md  README.md  START_HERE.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: smoke-tests.yml
docs/: EXTENDING.md  LEARNING_PATH.md  PAPER_WORKFLOW.md  PARAMETERS.md  README.md
docs/latex/: code_run_guide.tex  cyberguide.sty  cyberlecture.sty  implementation_companion.tex  lecture_style.tex  note2_pinn_pidl_cyber_control.tex  tutorial_style.tex
docs/source/: code_run_guide.tex  implementation_companion.tex  note2_pinn_pidl_cyber_control.tex
experiments/: OUTPUT_PREVIEW.md  README.md  baseline_comparison_metrics.csv  control_pinn_training_history.csv  inverse_pinn_training_history.csv  node_siprs_inverse_pinn_smoke.csv  pidl_training_history.csv  pmp_informed_pinn_training_history.csv  training_diagnostic_glossary.md  training_summary.md
figures/: inverse_pinn_sparse_data.figure.json  neural_architectures.figure.json  pidl_missing_mechanism.figure.json
scripts/: README.md  generate_figures.py  run_smoke_tests.sh  run_training_iterations.py
src/: README.md  control_pinn_malware.py  experiment_profiles.py  inverse_pinn_sir_malware.py  node_siprs_inverse_pinn.py  node_sips_inverse_pinn.py  pidl_unknown_mechanism.py  plotting_compat.py  pmp_informed_pinn_malware.py  shared_setup.py
tests/: test_pinn_components.py
